[gd_scene load_steps=11 format=2]

[ext_resource path="res://JogadorScript.gd" type="Script" id=1]
[ext_resource path="res://Assets/Skeleton/Sprite Sheets/Skeleton Idle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Skeleton/Sprite Sheets/Skeleton Hit.png" type="Texture" id=3]
[ext_resource path="res://Assets/Skeleton/Sprite Sheets/Skeleton Walk.png" type="Texture" id=4]
[ext_resource path="res://Assets/Skeleton/Sprite Sheets/Skeleton Dead.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Acertado"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TexturaJogador:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TexturaJogador:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TexturaJogador:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Correr"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TexturaJogador:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TexturaJogador:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TexturaJogador:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TexturaJogador:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TexturaJogador:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TexturaJogador:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Morrendo"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("TexturaJogador:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TexturaJogador:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TexturaJogador:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9.52428, 15.6107 )

[node name="Jogador" type="KinematicBody2D"]
collision_mask = 14
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TexturaJogador" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 8
frame = 1

[node name="AnimacaoJogador" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Acertado = SubResource( 1 )
anims/Correr = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Morrendo = SubResource( 4 )

[node name="ColisaoJogador" type="CollisionShape2D" parent="."]
position = Vector2( -2, 1 )
shape = SubResource( 5 )

[node name="raycasts" type="Node2D" parent="."]

[node name="Raycast1" type="RayCast2D" parent="raycasts"]
position = Vector2( 4.10944, 0.00535679 )
enabled = true
cast_to = Vector2( 0, 18.625 )
collision_mask = 8

[node name="Raycast2" type="RayCast2D" parent="raycasts"]
position = Vector2( -9.72283, -0.00507164 )
enabled = true
cast_to = Vector2( 0, 18.625 )
collision_mask = 8

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -128
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 15.0
drag_margin_left = 0.4
drag_margin_top = 0.3
drag_margin_right = 0.4
drag_margin_bottom = 0.3
editor_draw_limits = true
editor_draw_drag_margin = true

[connection signal="animation_finished" from="AnimacaoJogador" to="." method="_on_AnimacaoJogador_animation_finished"]
